criacao de arquico style.css e altercao em index

--- a/1Projetosite/index.html
+++ b/1Projetosite/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    
-    <title>Site projeto</title>
-</head>
-<body>
-    <p>Página teste</p>
-    
-</body>
+    <head>
+        <title>+DesignWeb</title>
+    </head>
+    <body>
+        <p>Página teste</p>
+    </body>
 </html>
